--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <p id="paragraph 1"></p>
 
     <script>
-      document.getElementById("heading 1").innerHTML=("This is JavaScript.")
-      document.getElementById("paragraph 1").innerHTML=("5+6")
+      document.getElementById("heading 1").innerHTML=("This is JavaScript.");
+      document.getElementById("paragraph 1").innerHTML=("5+6");
     </script>
   </body>
 </html>
