--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1 id="heading 1" onclick="changeText()">JavaScript</h1>
+    <h1 id="heading" onclick="changeText()">JavaScript</h1>
     <p id="addition"></p>
   
     <script>
       function changeText(){
-        if(document.getElementById("heading 1").innerHTML=='JavaSript'){
-          document.getElementById("heading 1").innerHTML='Is awesome'
+        if(document.getElementById("heading").innerHTML=='JavaSript'){
+          document.getElementById("heading").innerHTML='Is awesome'
        }else{
-          document.getElementById("heading 1").innerHTML='JavaScript'
+          document.getElementById("heading").innerHTML='JavaScript'
         }
       }
 
