--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           advice = "Carry a jacket. It might rain";
           break;           
         }
+        document.getElementById("outputText").innerHTML = "weather advice" + advice;
       }
     </script>
   </body>
